[package]
name = "pre"
version = "0.1.0"
authors = ["Toralf Wittner <tw@dtex.org>"]

[dependencies]
bincode = "1.0"
blake2 = "0.7" # remove when an impl for Digest is provided for blake2b_simd
blake2b_simd = "0.2"
curve25519-dalek = { version = "0.19", features = ["serde"] }
hkdf = "0.6"
lazy_static = "1.1"
rand = "0.5"
ring = "0.13"
serde = "1.0"
serde_derive = "1.0"
smallvec = "0.6"
subtle = "0.7"

[dev-dependencies]
rand = "0.5"
